# duckdb-wasm

./: .gitignore  Cargo.toml  Makefile  README.md
cmake/: postgres-deps.cmake  wasm-extension-config.cmake
cmake/azure-deps/: README.md  azure-563589b2-CMakeLists.txt.patch  azure-563589b2-ca-bundle-blob.patch
cmake/delta-wasi/: README.md  kernel-v0.21.0-sync-engine.patch
cmake/iceberg-wasi/: README.md
cmake/iceberg-wasi/aws-stubs/aws/core/: Aws.h
cmake/iceberg-wasi/aws-stubs/aws/core/auth/: AWSCredentials.h  AWSCredentialsProvider.h  AWSCredentialsProviderChain.h
cmake/iceberg-wasi/aws-stubs/aws/core/http/: HttpClient.h  HttpRequest.h
cmake/postgres-wasi/: shim.h  stubs.c
cmake/postgres-wasi/include/: termios.h
cmake/postgres-wasi/include/sys/: wait.h
cmake/quack-deps/: quack_wasi_bridge.cpp
cmake/shell-wasi/: shell-wasi-shim.h  shell_ext_bridge.cpp  shell_ext_bridge.h  shell_wasi_stubs.c
cmake/shell-wasi/include/: pwd.h
cmake/ui-deps/: README.md  ui-a135471-CMakeLists.txt.patch  ui-a135471-http_server.cpp.patch  ui-a135471-http_server.hpp.patch  ui-a135471-httplib.hpp.patch  ui-a135471-ui_extension.cpp.patch  ui-a135471-watcher.cpp.patch
cmake/wasi-override/include/: netdb.h
core/: Cargo.toml  build.rs
core/cpp/: wasm_collation.cpp  wasm_component_optimizer.cpp  wasm_files.cpp  wasm_files_bridge.h  wasm_index.cpp  wasm_index.hpp  wasm_index_bridge.h  wasm_index_optimizer.cpp  wasm_optimizer_bridge.h  wasm_storage.cpp  wasm_storage_bridge.h  wasm_table_stream.cpp  wasm_table_stream_bridge.h
core/src/: bindings.rs  lib.rs
core/wit/: duckdb-core.wit
docs/: v3-core-shim-plan.md  v4-columnar-core-path.md
examples/noop-provider/: .gitignore  README.md  build.sh
examples/noop-provider/src/: noop_impl.c
examples/noop-provider/wit/: world.wit
libduckdb-sys/src/: lib.rs
scripts/: build-delta-kernel-wasm.sh  build-libduckdb-wasm.sh  build-shell-ext-wasm.sh  build-shell-wasm.sh  build-wasi-deps.sh  setup-env.sh  sync-core-wit.sh
shell-component/: Cargo.toml  build.rs
shell-component/src/: bindings.rs  lib.rs
shell-component/wit/: duckdb-shell.wit
shell-glue/: Cargo.toml
shell-glue/src/: lib.rs
shell-glue/wit/: deps  world.wit
wit/core/: duckdb-core.wit  wit
