[package]
name = "duckdb-component-core"
version = "0.1.0"
edition = "2021"

[lib]
# Keep the compiled cdylib named `ducklink_core.wasm` (the ducklink host loads
# it by that name) even though the package is now neutrally named.
name = "ducklink_core"
crate-type = ["cdylib"]

[dependencies]
libduckdb-sys = { path = "../libduckdb-sys" }
thiserror = "1.0"
serde_json = "1.0"
wit-bindgen-rt = { version = "0.41.0", features = ["bitflags"] }
libc = { version = "0.2", default-features = false }
arrow-array = { version = "53", default-features = false, features = ["ffi"] }
arrow-schema = { version = "53", default-features = false, features = ["ffi"] }
arrow-data = { version = "53", default-features = false, features = ["ffi"] }
arrow-ipc = { version = "53", default-features = false }

# Optional algorithm dep for the `embed-siphash` benchmark build only (off by
# default; keyed SipHash-1-3, byte-identical to the siphash component).
siphasher = { version = "1.0.3", optional = true }

# NOTE: the embed framework (compile an extension's algorithm directly into the
# core as a native scalar -- no WIT boundary) lives in this crate. The shipped
# build embeds nothing (the embed-* features are off by default), so the repo
# still ships pure DuckDB. The embeddable algorithms here are INLINED (no
# path-deps back into ducklink/extensions): aba_validate + fnv1a_64 are tiny and
# copied byte-for-byte from their components; siphash uses the `siphasher` crate.
# These features exist to produce the near-native "embedded" cells of the
# native-vs-wasm benchmark matrix (benches/native-vs-wasm in ducklink).

[features]
default = ["wasi"]
wasi = ["fs_shims"]
browser = []
fs_shims = []
# Embed an extension's scalar(s) into the core (benchmark builds; one per core).
embed-aba = []
embed-fnv1a = []
embed-siphash = ["dep:siphasher"]

[build-dependencies]
cc = "1.0"

[package.metadata.component]
package = "duckdb:component"

[package.metadata.component.target]
path = "wit"
world = "libduckdb"

[package.metadata.component.target.dependencies]
# Self-contained: the duckdb:extension contract is vendored under this crate's
# own wit/deps (was `../../wit/duckdb-extension` into ducklink).
"duckdb:extension" = { path = "wit/deps/duckdb-extension" }
"wasi:cli" = { path = "wit/deps/wasi-cli" }
"wasi:filesystem" = { path = "wit/deps/wasi-filesystem" }
"wasi:io" = { path = "wit/deps/wasi-io" }
"wasi:clocks" = { path = "wit/deps/wasi-clocks" }
"wasi:sockets" = { path = "wit/deps/wasi-sockets" }
"wasi:random" = { path = "wit/deps/wasi-random" }
"tvm:memory" = { path = "wit/deps/tvm" }
