[package]
name = "duckdb-shell-glue"
version = "0.1.0"
edition = "2021"

[lib]
name = "shell_glue"
# A wasm staticlib (archive of wasm objects) linked into the shell command by
# the clang driver in scripts/build-shell-wasm.sh. Carries the wit-bindgen
# component-type metadata so wasm-component-ld declares the extension imports.
crate-type = ["staticlib"]

[dependencies]
wit-bindgen = "0.57"
# Reuse the DuckDB C-API extern declarations + types (duckdb_connection,
# duckdb_create_scalar_function, ...). The symbols themselves are provided by the
# merged libduckdb-wasi.a at the final clang link; this dep only supplies the
# bindings (and its link directives are inert for a staticlib).
libduckdb-sys = { path = "../libduckdb-sys" }
